[workspace]

members = [
	"basics",
	"boxes",
	"closures",
	"dereferencing",
	"dropping",
	"enums",
	"iterators",
	"loops",
	"multiple_owners",
	"mutexes",
	"patterns",
	"project_guessing_game",
	"project_minigrep",
	"ownership",
	"testing",
	"threads",
	"vectors",
	"web-server-multi-thread",
	"web-server-single-thread"
]