[workspace]

members = [
	"basics",
	"boxes",
	"closures",
	"dereferencing",
	"dropping",
	"enums",
	"iterators",
	"loops",
	"macros",
	"multiple_owners",
	"mutexes",
	"patterns",
	"project_guessing_game",
	"project_minigrep",
	"ownership",
	"strings",
	"structs",
	"testing",
	"threads",
	"vectors",
	"web-server-multi-thread",
	"web-server-single-thread"
]